test/types/sync/vass/ref-sync-6-blank.chpl
// Passing a single variable to a sync blank-intent formal.

var SVAR: single int;

MYPROC(SVAR);

proc MYPROC(FORMAL: sync int) { }
